correction mobile taille

--- a/src/style/collapse.scss
+++ b/src/style/collapse.scss
@@ -20,7 +20,7 @@ $text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     text-align: center;
 
     @media (max-width: 767.98px) {
-    padding: 55px 0 60px 0;
+    padding: 55px 0 65px 0;
     }
 
     h1 {
